*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -1,7 +1,7 @@
 В этой директории находятся разные небольшие библиотеки 
-нижнего уровня: работа с точками, с картинками, с геоданными и т.п.
+нижнего уровня: работа с точками, с цветом, с картинками, с геоданными и т.п.
 
-point.h -- точка на плоскости (сложение/вычитание, умножение на число, сравнение)
+point.h -- точка на плоскости (сложение/вычитание, умножение на число, сравнение и т.п.)
     То, что раньше находилось в трех местах:
     viewer/pointrect.h
     srtm02/point.h
