*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -18,8 +18,12 @@ pointset.h -- работа с множествами точек, с границами
     пришло из srtm02/point.h
 пока не готово!!!
 
-color.h -- работа с цветами
+color.h -- цвета
     То, что раньше находилось в 
     image-gdk/image.h
     srtm02/color.h
+
+image.h -- картинка
+
+image_io.h -- чтение/запись картинок в файл
 пока не готово!!!
