*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -31,6 +31,7 @@ rainbow.h -- радуга и пр. цветовые градиенты
     из srtm02/color.h
 
 image.h -- картинка с окном.
+
     проверка скорости при разной организации доступа к данным
     (заполнение картинки 1000х1000 int):
     1. vector<int>    -- 8.13s
@@ -42,6 +43,18 @@ image.h -- картинка с окном.
 
     Вообще, кажется, что окно будет не нужно, когда мы научимся грузить часть картинки.
     Пока пусть будет для проверки...
+
+    Не очень понимаю, как создавать картинки в отдельной функции...
+    Как ни странно, в таком кусочке картинка создается один раз и не копируется. Странно...
+
+    Image<RGB> get_image(){
+      Image<RGB> i(100,100);
+      return i;
+    }
+
+    main(){
+      Image<RGB> i1 = get_image();
+    }
 
 image_io.h -- чтение/запись картинок в файл
 пока не готово!!!
