*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -30,31 +30,14 @@ TODO сложение и умножение на число??
 rainbow.h -- радуга и пр. цветовые градиенты
     из srtm02/color.h
 
-image.h -- картинка с окном.
-
-    проверка скорости при разной организации доступа к данным
-    (заполнение картинки 1000х1000 int):
-    1. vector<int>    -- 8.13s
-    2. int image[w*h] -- 1.37s
-    3. с функциями доступа void setxy(int *image, int x, int y, int c){image[w*y+x] = c;} -- 2.23s
-       (кажется, что передача одного параметра добавляет 0.2с,
-        причем, неважно, inline или нет (странно...) )
-    4. Доступ [y*w0+x] или [i] -- несущественно
+image.h -- картинка с окном и с настоящим memory management'ом!.
+    там в начале все написано...
 
     Вообще, кажется, что окно будет не нужно, когда мы научимся грузить часть картинки.
     Пока пусть будет для проверки...
-
-    Не очень понимаю, как создавать картинки в отдельной функции...
-    Как ни странно, в таком кусочке картинка создается один раз и не копируется. Странно...
-
-    Image<RGB> get_image(){
-      Image<RGB> i(100,100);
-      return i;
-    }
-
-    main(){
-      Image<RGB> i1 = get_image();
-    }
+    
+    Кстати, красивая идея делать Image<RGB> не слишком хороша из-за скорости --
+    работа с Image<int> вдвое быстрее...
 
 image_io.h -- чтение/запись картинок в файл
 пока не готово!!!
