*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -41,3 +41,7 @@ image.h -- картинка с окном и с настоящим memory management'ом!.
 
 image_io.h -- чтение/запись картинок в файл
 пока не готово!!!
+
+image_io_tiff.h -- чтение/запись tiff-файлов
+    все работает!
+    см. ../tests/tiff/
