*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -47,9 +47,10 @@ image_io_tiff.h -- чтение/запись tiff-файлов
 
 
 TODO
- - сохранение jpeg
+ - обработка ошибок в jpg (хотя бы, чтобы сделать автоопределение формата)
  - чтение/запись png
  - чтение hgt
  - google.h, srtm.h
- - гео-преобразования
+ - геодезические преобразования
+ - преобразования картинок
  
