*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -45,6 +45,13 @@ image_io.h -- чтение/запись картинок в файл
 image_io_tiff.h -- чтение/запись tiff-файлов
   int tiff_image::load(char *file, Rect<int> src_rect, Image<int> & image, Rect<int> dst_rect);
 
+image_io_jpeg.h -- чтение/запись jpeg-файлов
+
+google.h -- загрузчик картинок с maps.google.com
+ - сделать произвольный доступ с кэшированием
+ - сделать скачивание
+ - поменять структуру локального хранилища данных. Куча директорий - неправильно,
+   надо бы $zoom/$file.jpg
 
 TODO
  - обработка ошибок в jpg (хотя бы, чтобы сделать автоопределение формата)
