*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -54,10 +54,10 @@ google.h -- загрузчик картинок с maps.google.com
    надо бы $zoom/$file.jpg
 
 TODO
- - обработка ошибок в jpg (хотя бы, чтобы сделать автоопределение формата)
+ - обработка ошибок в jpg и в tiff (хотя бы, чтобы сделать автоопределение формата)
  - чтение/запись png
  - чтение hgt
- - google.h, srtm.h
+ - srtm.h
  - геодезические преобразования
  - преобразования картинок
  
