*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -151,7 +151,7 @@ TODO
     - обработка ошибок
 
 ==================================================================
-#include "google.h"
+#include "image_google.h"
 
 Работа с космоснимками, скачанными с maps.google.com.
 
