*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -1,47 +1,154 @@
 В этой директории находятся разные небольшие библиотеки 
 нижнего уровня: работа с точками, с цветом, с картинками, с геоданными и т.п.
 
-cache.h -- кэш
-    пришло из viewer/cache.h
-    Без изменений.
+==================================================================
+Разные полезные мелкие объекты.
+==================================================================
+#include "cache.h"
 
-point.h -- точка на плоскости (сложение/вычитание, умножение на число, сравнение и т.п.)
-    То, что раньше находилось в трех местах:
-    viewer/pointrect.h
-    srtm02/point.h
-    io_new/geo_m.h  g_point
-    наверное, и вместо comparable_pair надо использовать Point...
+    class Cache<K,V>
 
-rect.h -- прямоугольники
-    пришло из viewer/pointrect.h
+Кэш объектов типа V, упорядоченных по ключу типа K
 
-pointset.h -- работа с множествами точек, с границами
+    Cache (int capacity);
+    Cache (Cache const & other);
+    void swap (Cache<K,V> & other);
+    Cache<K,V> & operator= (Cache<K,V> const& other);
+
+    int add (K const & key, V const & value);
+    V & get (K const & key);
+
+    bool contains (K const & key);
+    int space_remains();
+    void clear();
+
+==================================================================
+#include "color.h"
+
+    struct RGB
+    struct RGBA
+
+3- и 4-байтовый цвет. Преобразования друг в друга и в int.
+
+    unsigned char r,g,b
+    RGB();
+    RGB(unsigned char r, unsigned char g, unsigned char b);
+    RGB(int c);    
+    operator int () const;
+    operator RGBA () const;
+
+И для RGBA - аналогично
+
+Не слишком очевидно, надо ли часто использовать эти классы. 
+Например, работать с Image<RGB> существенно медленнее, чем
+с Image<int>.
+
+С другой стороны, может быть приятно использовать для 
+разный преобразований:
+Image<int> image(100,100,RGB(r,g,b));
+int c = RGB(b[3*i], b[3*i+1], b[3*i+2]);
+и т.п.
+
+TODO 
+    * сложение и умножение на число??
+
+==================================================================
+#include "rainbow.h"
+
+Радуга и пр. цветовые градиенты (srtm02/color.h)
+
+
+    RGB rainbow(int n, unsigned short mingrade);
+
+mingrade - чему соответствует n=0:
+0 - blue, 1 - сyan, 2 - green etc.
+...
+
+    RGB rainbow(int n, int min, int max, int grades, int mingrade);
+
+...
+
+==================================================================
+#include "point.h"
+
+    struct Point<T>
+
+Точка на двумерной плоскости. Координаты типа T. Определено
+сложение/вычитание, умножение/деление на число, сравнение...
+
+То, что раньше находилось в трех местах:
+viewer/pointrect.h
+srtm02/point.h
+io_new/geo_m.h  g_point
+viewer/comparable_pair.h
+
+==================================================================
+#include "rect.h"
+
+class Rect<T>
+
+прямоугольник на двумерной плоскости. Координаты типа T.
+
+пришло из viewer/pointrect.h
+
+    Point<T> TLC, BRC;
+    bool empty() const
+    T width() const;
+    T height() const;
+
+
+    Rect<T> intersect (Rect<T> const & R1, Rect<T> const & R2);
+    Rect<T> bounding_box (Rect<T> const & R1, Rect<T> const & R2);
+    void clip_point_to_rect (Point<T> & p, const Rect<T> & r);
+    void clip_rect_to_rect (Rect<T> & r1, const Rect<T> & r2);
+
+
+==================================================================
+#include "pointset.h" -- работа с множествами точек, с границами
     пришло из srtm02/point.h
 пока не готово!!!
 
-color.h -- цвет 
-    То, что раньше находилось в 
-    image-gdk/image.h
-    srtm02/color.h
-Два класса: RGB и RGBA, которые можно (кажется) свободно 
-преобразовывать друг в друга и в int.
-TODO сложение и умножение на число??
+==================================================================
 
-rainbow.h -- радуга и пр. цветовые градиенты
-    из srtm02/color.h
+#include "image.h"
 
-image.h -- картинка с окном и с настоящим memory management'ом!.
-    там в начале все написано...
+    struct Image<T>
 
-    Вообще, кажется, что окно будет не нужно, когда мы научимся грузить часть картинки.
-    Пока пусть будет для проверки...
+Картинка с окном -- двумерный массив элементов произвольного типа с
+настоящим memory management'ом!.
+
+При присвоении и инициализации из другой картинки массив данных не копируется!
+(устроен счетчик ссылок на массив, когда ссылок не остается - массив удаляется)
+
+Копирование картинки и данных: image1 = image.copy()
+
+Доступ к точкам картинки: image.get(x,y),  image.set(x,y,c)
+Доступ к точкам окна:     image.wget(x,y), image.wset(x,y,c)
+В функциях доступа не проверяется выход за границы картинки!
+Компилить с ключом -O1 (скорость возрастет раза в три)
+
+Размер картинки: image.w0, image.h0
+Размер окна:     image.w,  image.h
+
+Получить размеры окна:
+    Rect<int> r = image.window_get();
+Установить размеры окна
+(если прямоугольник вылезает за картинку - он правильно обрезается):
+    image.window_set(r);  
+Установить окно во всю картинку:
+    image.window_expand();
+
+    bool empty() const;
+
+Вообще, кажется, что окно будет не нужно, когда мы научимся грузить часть картинки.
+Пока пусть будет для проверки...
     
-    Кстати, красивая идея делать Image<RGB> не слишком хороша из-за скорости --
-    работа с Image<int> вдвое быстрее...
+Красивая идея делать Image<RGB> не слишком хороша из-за скорости --
+работа с Image<int> вдвое быстрее...
 
-image_io.h -- чтение/запись картинок в файл
-пока не готово!!!
-
+TODO
+    * может быть, убрать окно...
+    * для тестовых целей сделать версии get и set с проверкой диапазона.
 
 ==================================================================
     Работа с картинками
