*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -153,7 +153,7 @@ TODO
 ==================================================================
     Работа с картинками
 ==================================================================
-#include "image_io_tiff.h"
+#include "image_tiff.h"
 
 Чтение и запись TIFF-файлов, с помощью библиотеки libtiff
 
@@ -209,7 +209,7 @@ TODO
     - обработка ошибок
 
 ==================================================================
-#include <image_io_jpeg.h>
+#include <image_jpeg.h>
 
 Чтение и запись JPEG-файлов, с помощью библиотеки libjpeg
 
