--- a/utils/Readme
+++ b/utils/Readme
@@ -371,3 +371,8 @@ TODO
  - автоматическое определение формата картинки при чтении
  - Layer, умеющий загружать картинки в нужной проекции.
  
+
+=============
+Viewer-Workplane-Layer
+
+- viewer - gtk-widget, который знает и показывает только workplane
