*** empty log message ***

--- a/layers/README
+++ b/layers/README
@@ -15,7 +15,11 @@ Layer
 - слои-преобразования
 
 
+Ни одного правильного layer'a пока не существует!
+
 =====================================================================
+
+
 
 layer_grid - прямоугольная сетка
 todo
