*** empty log message ***

--- a/layers/README
+++ b/layers/README
@@ -25,3 +25,20 @@ layer_grid - прямоугольная сетка
 todo
  - смещение
  - какие-то проблемы, если шаг кратен размеру плитки
+
+
+
+===================
+layer_r - показ растровых картинок (jpeg, tiff, png)
+
+Политика кэширования:
+ - не хочется загружать сразу весь файл, если файл большой.
+ - при перемасштабировании хочется использовать старые данные
+ - при этом, во многих случаях, если уж требуется прочитать что-то с диска -
+   может иметь смысл читать много.
+   (лучше прочитать всю картинку, чем прочитать 1/4, а 3/4 взять из более крупного масштаба!)
+
+Потому, надо делать так: У нас есть "буфер" - картинка, например
+2048*2048. если у нас требуют картинку из буфера - мы отдаем картинку
+из буфера. Иначе - мы загружаем новый буфер в нужном масштабе, так,
+чтобы запрошенная картинка была в его центре. 
