*** empty log message ***

--- a/geo_io/Readme
+++ b/geo_io/Readme
@@ -1,1 +1,12 @@
 Здесь должна лежать библиотека ввода-вывода геоданных.
+
+
+======================================================================
+io_gps --  обмен точками и треками с gps-приемникам через rs232 или usb
+
+options:
+int	gps_switch_off 	1	-- выключить ли gps после передачи данных
+
+======================================================================
+io_gu -- чтение/запись формата garmin-utils (точки и треки)
+======================================================================
