*** empty log message ***

--- a/utils/Readme
+++ b/utils/Readme
@@ -2,7 +2,7 @@
 нижнего уровня: работа с точками, с цветом, с картинками, с геоданными и т.п.
 
 ==================================================================
-Разные полезные мелкие объекты.
+Полезные объекты
 ==================================================================
 #include "cache.h"
 
@@ -29,6 +29,7 @@
     struct RGBA
 
 3- и 4-байтовый цвет. Преобразования друг в друга и в int.
+Сейчас нигде не используется, надо бы убрать...
 
     unsigned char r,g,b
     RGB();
@@ -50,7 +51,7 @@ int c = RGB(b[3*i], b[3*i+1], b[3*i+2]);
 и т.п.
 
 TODO 
-    * сложение и умножение на число??
+    * сложение и умножение на число, операции с прозрачностью?
 
 ==================================================================
 #include "rainbow.h"
@@ -65,7 +66,6 @@ mingrade - чему соответствует n=0:
 ...
 
     RGB rainbow(int n, int min, int max, int grades, int mingrade);
-
 ...
 
 ==================================================================
@@ -79,21 +79,19 @@ mingrade - чему соответствует n=0:
 
     struct Image<T>
 
-Картинка с окном -- двумерный массив элементов произвольного типа с
+Картинка -- двумерный массив элементов произвольного типа с
 настоящим memory management'ом!.
 
-При присвоении и инициализации из другой картинки массив данных не копируется!
+При присвоении и инициализации из другой картинки массив данных не копируется.
 (устроен счетчик ссылок на массив, когда ссылок не остается - массив удаляется)
 
 Копирование картинки и данных: image1 = image.copy()
 
 Доступ к точкам картинки: image.get(x,y),  image.set(x,y,c)
-Доступ к точкам окна:     image.wget(x,y), image.wset(x,y,c)
 В функциях доступа не проверяется выход за границы картинки!
 Компилить с ключом -O1 (скорость возрастет раза в три)
 
-Размер картинки: image.w0, image.h0
-Размер окна:     image.w,  image.h
+Размер картинки: image.w, image.h
 
 Получить размеры окна:
     Rect<int> r = image.window_get();
@@ -327,7 +325,6 @@ TODO
 
 
 TODO
- - чтение/запись png
  - чтение hgt
  - srtm.h
  - геодезические преобразования
