--- a/znaki2/ChangeLog
+++ b/znaki2/ChangeLog
@@ -1,4 +1,12 @@
 Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sat Jul 26 19:14:18 2008 +0400
+
+    znaki2: fix label colors
+
+znaki2/hr.cnf
+znaki2/mmb.cnf
+
+Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sat Jul 26 18:53:16 2008 +0400
 
     znaki2: добавил точечный объект для урочища
