--- a/znaki2/ChangeLog
+++ b/znaki2/ChangeLog
@@ -1,4 +1,12 @@
 Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sat Jul 26 19:15:11 2008 +0400
+
+    znaki2: add tx2pt.cpp program to converd old text objects to points with labels
+
+znaki2/Makefile
+znaki2/tx2pt.cpp
+
+Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sat Jul 26 19:14:18 2008 +0400
 
     znaki2: fix label colors
