--- a/arc/ChangeLog
+++ b/arc/ChangeLog
@@ -1,5 +1,13 @@
 ######
 Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sat Jul 26 19:40:14 2008 +0400
+
+    arc: add old txt to znaki2.tgz
+
+arc/znaki2.tgz
+
+######
+Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sat Jul 26 19:35:49 2008 +0400
 
     arc: add znaki2.tgz: old programs from znaki2 dir
