--- a/scripts/ChangeLog
+++ b/scripts/ChangeLog
@@ -1,5 +1,13 @@
 ######
 Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sat Jul 26 19:48:05 2008 +0400
+
+    scripts: modify ms-commit to work with deleted without git-rm files
+
+scripts/ms-commit
+
+######
+Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sat Jul 26 19:23:56 2008 +0400
 
     scripts: add separator to ChangeLog
