--- a/programs/ChangeLog
+++ b/programs/ChangeLog
@@ -1,3 +1,11 @@
+######
+Author: Tim Alexeevsky <tim@zhuchka.(none)>
+Date:   Sat Jul 26 20:30:49 2008 +0400
+
+    programs: include cstring
+
+programs/mapsoft_trackprofile.cpp
+
 slazav, 2008/07/21
 - all #include <cstring> to 
   fig_ref_mod.cpp
