--- a/arc/ChangeLog
+++ b/arc/ChangeLog
@@ -1,5 +1,13 @@
 ######
 Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sun Jul 27 14:37:39 2008 +0400
+
+    arc: fix wring commit with znaki2.tgz
+
+arc/znaki2.tgz
+
+######
+Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sat Jul 26 19:40:14 2008 +0400
 
     arc: add old txt to znaki2.tgz
