--- a/znaki2/ChangeLog
+++ b/znaki2/ChangeLog
@@ -1,5 +1,15 @@
 ######
 Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sun Jul 27 17:05:16 2008 +0400
+
+    znaki2: еще одно исправление с урочищами. Выкинул старые знаки из cnf
+
+znaki2/hr.cnf
+znaki2/mmb.cnf
+znaki2/tx2pt.cpp
+
+######
+Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sun Jul 27 16:52:07 2008 +0400
 
     znaki2: исправил программу для преобразования урочищь из текстового объекта в точечный
