--- a/libzn-utils/ChangeLog
+++ b/libzn-utils/ChangeLog
@@ -1,3 +1,12 @@
+######
+Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Sun Jul 27 17:09:53 2008 +0400
+
+    libzn-utils: вставил в скрипты автоматическое исправление знаков урочищ
+
+libzn-utils/scripts/update_from_fig
+libzn-utils/scripts/update_from_mp
+
 Author: Vladislav Zavjalov <slazav@narod.ru>
 Date:   Sat Jul 26 14:07:12 2008 +0400
 
