--- a/loaders/ChangeLog
+++ b/loaders/ChangeLog
@@ -1,4 +1,12 @@
 ######
+Author: Vladislav Zavjalov <slazav@narod.ru>
+Date:   Wed Sep 17 10:56:17 2008 +0400
+
+    loaders: fig google downloading
+
+loaders/image_google.cpp
+
+######
 Author: Tim Alexeevsky <tim@zhuchka.(none)>
 Date:   Sat Jul 26 20:13:55 2008 +0400
 
