--- a/lib2d/ChangeLog
+++ b/lib2d/ChangeLog
@@ -15,6 +15,6 @@ Date:   Fri Sep 26 11:07:34 2008 +0400
 lib2d/point.h
 lib2d/point_cross.h
 
-- modify line_rectcrop() to return bool value: is lane was really cropped.
+- modify line_rectcrop() to return bool value: was line really cropped.
   (need testing!)
 - add this ChangeLog file
