--- a/lib2d/ChangeLog
+++ b/lib2d/ChangeLog
@@ -1,5 +1,14 @@
 ######
 Author: Vladislav Zavjalov <slazav@altlinux.org>
+Date:   Fri Oct 10 11:20:27 2008 +0400
+
+    lib2d: fix lib2d/io2d.h
+
+lib2d/io2d.h
+lib2d/test_io2d.cpp
+
+######
+Author: Vladislav Zavjalov <slazav@altlinux.org>
 Date:   Fri Oct 10 11:10:42 2008 +0400
 
     lib2d: lib2d: io2d.h for lexical_casts of objects. Test for casts. Make Rect to be < and = comparable
