--- a/programs/ChangeLog
+++ b/programs/ChangeLog
@@ -1,5 +1,13 @@
 ######
 Author: Vladislav Zavjalov <slazav@altlinux.org>
+Date:   Sun Oct 12 22:51:08 2008 +0400
+
+    programs: fix mapsoft_convert.cpp
+
+programs/mapsoft_convert.cpp
+
+######
+Author: Vladislav Zavjalov <slazav@altlinux.org>
 Date:   Thu Oct 9 09:50:45 2008 +0400
 
     programs: fig_sort program for sorting fig files
