gred: update README

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -1,7 +1,7 @@
     Универсальный графический редактор
 
 ===========================================================================
-    1. Обзор
+    0. Обзор
 
 Мы хотим работать со множеством разнородных графических объектов, каждый
 из которых может быть как-то нарисован на растровой плоскости. Объекты
@@ -22,7 +22,7 @@
 извлечены из их кэша.
 
 ===========================================================================
-    2. Графическая плоскость (GPlane)
+    1. Графическая плоскость (GPlane)
 
 Интерфейс описан в файле gplane.h:
 
@@ -59,13 +59,20 @@ TODO: протестировать SimpleViewer на небольших знач
 TODO: класс "плоскость, содержащая объекты"
 
 ===========================================================================
-    3. Вьюеры графической плоскости (SimpleViewer, MThreadViewer)
+    2. Вьюеры графической плоскости (SimpleViewer, MThreadViewer)
 
 В файле simple_viewer.h описан простейший GTK-вьюер графической плоскости.
-
 Он позволяет таскать плоскость по экрану, удерживая левую кнопку мыши.
 По expose_event необходимые части плоскости перерисовываются.
 Этот вьюер подходит только для быстро рисующихся плоскостей.
+
+SimpleViewer V(plane);       // простой вьюер
+iPoint pt = V.get_origin();  // получить положение окна
+V.set_origin(pt);            // установить новое положение окна
+GPlane * pl = V.get_plane(); // получить ссылку на растровую плоскость
+V.set_plane(pl);             // заменить ссылку на растровую плоскость
+
+TODO: функция reset(). И применить ее в set_plane.
 
 В файле mthread_viewer.h на основе простого вьюера описан многопотоковый
 вьюер, удобный для медленных плоскостей. По expose_event сразу рисуется
@@ -73,7 +80,12 @@ TODO: класс "плоскость, содержащая объекты"
 запускается отдельный поток, готовящий картинку из "медленной"
 плоскости. По мере готовности, картинка перерисовывается.
 
-Недостатки:
+MThreadViewer V(plane);
+V.set_fast_plane();             // установить "быструю" плоскость по умолчанию 
+V.set_fast_plane(pl);           // установить "быструю" плоскость 
+GPlane * pl = get_fast_plane(); // получить ссылку на быструю плоскость
+
+Недостатки MThreadViewer:
 
 * непонятно, как быстро остановить все потоки при необходимости обновить
   данные.
@@ -90,14 +102,17 @@ TODO: Для решения этих недостатков надо бы сде
 
 Резиновая линия - это пара точек и пара флагов привязки (первый бит
 флага привязки показывает, привязана ли к мыши координата x, второй -
-привязана ли к мыши координата y)
+привязана ли к мыши координата y).
 
-При добавлении резины ко вьюеру определяются функции рисования и убираения резины
+При добавлении резины ко вьюеру определяются функции рисования и убирания резины.
+Резина убирается перед движением мыши и перед рисованием данных и рисуется после.
+Для этого переопределены функции draw_image (оборачивается функция из viewer) и 
+on_motion_notify_event.
 
-при движении мыши без скроллирования
-при перемещении плоскости (когда реально shift делается)
-при рисовании картинки (обернуть функцию draw_image)
-одним потоком только первого и третьего места хватало почему-то :)
+RubberViewer<MyViewer> V(plane); // создать вьюер с резиной на основе MyViewer
+V.rubber_add(pt1,r1,pt2,r2);     // добавить сегмент резиновой линии
+V.rubber_add(x1,y1,r1,x2,y2,r2); // или так
+V.rubber_clear();                // очистить всю резину
 
 ===========================================================================
 
@@ -119,8 +134,8 @@ GPlaneInfo -- информация о привязке и масштабе. Об
 определенной области. Формат данных в кэше - на усмотрение объекта: это может
 быть набор точек для рисования линии или преобразованная растровая картинка.
 
-Объект может отдавать "сложность" кэширования и рисования. Это хочется
-применять для умного разбиения плоскости на плитки в зависимости от
+Объект может отдавать "сложность" кэширования и рисования. 
+Это хочется применять для умного разбиения плоскости на плитки в зависимости от
 сложности рисования объектов на плитках. Полезность этого пока
 непонятна.
 
