gred: simple_viewer: add GPlane range checking

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -59,7 +59,7 @@ TODO: протестировать SimpleViewer на небольших знач
 TODO: класс "плоскость, содержащая объекты"
 
 ===========================================================================
-    2. Вьюеры графической плоскости (SimpleViewer, MThreadViewer)
+    2. Вьюеры графической плоскости (SimpleViewer, MThreadViewer, DThreadViewer)
 
 В файле simple_viewer.h описан простейший GTK-вьюер графической плоскости.
 Он позволяет таскать плоскость по экрану, удерживая левую кнопку мыши.
@@ -88,12 +88,12 @@ GPlane * pl = get_fast_plane(); // получить ссылку на быстр
 Недостатки MThreadViewer:
 
 * непонятно, как быстро остановить все потоки при необходимости обновить
-  данные.
+  данные (как сделать reset()).
 * плитки большого размера могут рисоваться долго. Более красиво было бы
   рисовать все небольшими плитками одинакового размера.
 
-TODO: Для решения этих недостатков надо бы сделать вьюер с двумя потоками и квадратными
-плитками, как уже был у нас в mapsoft/viewer
+В файле dthread_viewer.h на основе простого вьюера описан двухпотоковый
+вьюер с квадратными плитками.
 
 ===========================================================================
     4. Вьюер с резиной (RubberViewer<ViewerType>)
